--- a/dest/index/index.html
+++ b/dest/index/index.html
@@ -4,7 +4,7 @@
     <title>Index</title>
 </head>
 <body>
-    Hello PostHTML!
-    <div class="custom">Text</div>
+    <h1>Hello PostHTML!</h1>
+    <div class="custom">Text…</div>
 </body>
 </html>
