--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>Index</title>
 </head>
 <body>
-    Hello PostHTML!
-    <custom>Text</custom>
+    <h1>Hello  PostHTML!</h1>
+    <custom>Text...</custom>
 </body>
 </html>
