add plugin posthtml-bem

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -5,5 +5,10 @@
 <body>
     <h1>Hello  PostHTML!</h1>
     <custom>Text...</custom>
+    <ul block="list" mod="theme:sun">
+        <li elem="item" mod="first">One</li>
+        <li elem="item">Two</li>
+        <li elem="item" mod="last">Three</li>
+    </ul>
 </body>
 </html>
