--- a/dest/index/index.html
+++ b/dest/index/index.html
@@ -6,5 +6,10 @@
 <body>
     <h1>Hello PostHTML!</h1>
     <div class="custom">Text…</div>
+    <ul class="list list_theme_sun">
+        <li class="list__item list__item_first">One</li>
+        <li class="list__item">Two</li>
+        <li class="list__item list__item_last">Three</li>
+    </ul>
 </body>
 </html>
