posthtml-bem example fix
'mod' should be 'mods'

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -5,10 +5,10 @@
 <body>
     <h1>Hello  PostHTML!</h1>
     <custom>Text...</custom>
-    <ul block="list" mod="theme:sun">
-        <li elem="item" mod="first">One</li>
+    <ul block="list" mods="theme:sun">
+        <li elem="item" mods="first">One</li>
         <li elem="item">Two</li>
-        <li elem="item" mod="last">Three</li>
+        <li elem="item" mods="last">Three</li>
     </ul>
     <article class="my-article">
         <h1>Hello "world"...</h1>
